--- a/employees-rest/build.gradle
+++ b/employees-rest/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
