--- a/employees-jpa-projection/src/main/resources/application.properties
+++ b/employees-jpa-projection/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=employees
 spring.datasource.password=employees
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
