--- a/employees-jpa-projection/build.gradle
+++ b/employees-jpa-projection/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:1.9.2'
 }
 
 tasks.named('test') {
