--- a/employees-jpa-projection/src/main/resources/application.properties
+++ b/employees-jpa-projection/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.generate_statistics=true
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+decorator.datasource.datasource-proxy.count-query=true
+logging.level.net.ttddyy=debug
