--- a/employees-jpa-one-to-one/build.gradle
+++ b/employees-jpa-one-to-one/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.hibernate.orm' version '6.6.8.Final'
 }
 
 group = 'training'
@@ -33,6 +34,14 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+hibernate {
+    enhancement {
+        lazyInitialization(true)
+        dirtyTracking(true)
+        associationManagement(true)
+    }
 }
 
 tasks.named('test') {
