--- a/employees-jpa-one-to-manys/src/main/resources/application.properties
+++ b/employees-jpa-one-to-manys/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=employees
 spring.datasource.password=employees
 spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
