--- a/employees-jpa-paging/src/main/resources/application.properties
+++ b/employees-jpa-paging/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=employees
 spring.datasource.password=employees
 spring.jpa.generate-ddl=true
+logging.level.org.hibernate.SQL=debug
