--- a/employees-jpa-cache/build.gradle
+++ b/employees-jpa-cache/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.redisson:redisson-hibernate-6:3.39.0'
 }
 
 tasks.named('test') {
