--- a/employees-jpa-cache/src/main/resources/application.properties
+++ b/employees-jpa-cache/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=employees
 spring.datasource.password=employees
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.factory_class=org.redisson.hibernate.RedissonRegionFactory
+spring.jpa.properties.hibernate.redisson.fallback=true
+spring.jpa.properties.hibernate.redisson.config=redisson.yaml
+
+logging.level.org.hibernate.SQL=debug
